--- a/customer.html
+++ b/customer.html
@@ -435,7 +435,7 @@
       <div class="header-content">
         <a href="#" class="logo">
           <i class="fas fa-utensils"></i>
-          <h1>Spice Food</h1>
+          <h1>FOODY</h1>
         </a>
         <div class="user-actions">
           <button class="cart-btn" id="cart-btn">
